fix: improve some features & feat: adding dark mode

--- a/src/input.css
+++ b/src/input.css
@@ -12,8 +12,7 @@ body {
 }
 
 .navbar-fixed {
-    @apply fixed z-[9999] bg-white bg-opacity-60;
-    backdrop-filter: blur(5px);
+    @apply fixed z-[9999] bg-white bg-opacity-60 backdrop-blur-sm dark:bg-transparent dark:bg-opacity-50;
     box-shadow: inset 0px -1px 0 0 rgba(0,0,0,0.1);
 }
 
@@ -27,4 +26,8 @@ body {
 
 .menu-active > span:nth-child(3) {
     @apply -rotate-45;
+}
+
+#dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3 
 }
